@@ -1931,8 +1931,9 @@ enum
     STR_SHORTCUT_SHOW_RECENT_MESSAGES = 2522,
     STR_SHORTCUT_SHOW_MAP = 2523,
     STR_SHORTCUT_SCREENSHOT = 2524,
+    STR_SHORTCUT_GIANT_SCREENSHOT = 2525,
 
-    // 2525--2532 unused
+    // 2526--2532 unused
 
     STR_SHORTCUT_BACKSPACE = 2533,
     STR_SHORTCUT_TAB = 2534,
